bk_ida/gccida/c1/expunge_block_nocompact
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:689:12: error: expected expression
*( _OWORD *)&b->aux = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:689:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->aux = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:690:12: error: expected expression
*( _OWORD *)&b->count = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:690:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->count = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:691:12: error: expected expression
*( _OWORD *)&b->global_live_at_start = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:691:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->global_live_at_start = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:692:12: error: expected expression
*( _OWORD *)&b->local_set = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:692:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->local_set = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:693:12: error: expected expression
*( _OWORD *)&b->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:693:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:694:12: error: expected expression
*( _OWORD *)&b->head_tree = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:694:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->head_tree = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:695:12: error: expected expression
*( _OWORD *)&b->head = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/cfg.c:695:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->head = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expunge_block_nocompact/src/obj/cfg.o] Error 1
